# loupe

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml  docs.yml  vscode.yml
core/: Cargo.toml
core/src/: watcher.rs
core/src/cmd/: build.rs  mcp.rs  search.rs  serve.rs  sync.rs
core/src/index/: builder.rs  mod.rs  searcher.rs
core/tests/: search_e2e.rs
skills/loupe/: SKILL.md
vscode/: .vscodeignore  README.md  package-lock.json  package.json
vscode/scripts/: capture-screenshots.mjs
vscode/scripts/readme-screenshots/: quickpick.html  sidebar.html  theme.css
vscode/src/test/: extension.test.ts  realbinary.test.ts  sidecar.test.ts
web/: changelog.md  index.md  package-lock.json  package.json
web/.vitepress/: config.ts
web/guide/: getting-started.md  how-it-works.md
web/reference/: cli.md  configuration.md  mcp-server.md  vscode.md
