[package]
name = "loupe"
version = "0.4.0"
edition = "2021"
description = "Incremental n-gram code-search index — CLI, MCP server, and VSCode sidecar (Tantivy)"
repository = "https://github.com/ukitomato/loupe"
license = "MIT"

[lib]
name = "loupe"
path = "src/lib.rs"

[[bin]]
name = "loupe"
path = "src/main.rs"

[dependencies]
tantivy = "0.22"
encoding_rs = "0.8"
ignore = "0.4"
anyhow = "1"
rayon = "1"
memchr = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
notify = "6"
regex = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
encoding_rs = "0.8"
serde_json = "1"
